Add margin between paragraphs

--- a/app/globals.css
+++ b/app/globals.css
@@ -102,7 +102,7 @@
   }
 
   :where(p) {
-    @apply leading-7 [&:not(:first-child)]:mt-6;
+    @apply leading-7 [&:not(:first-child)]:mt-6 mb-4;
   }
 
   :where(blockquote) {
